# PowerEngine

./: .clang-format  .gitignore  .gitmodules  AppIcon.icns  CMakeLists.txt  Info.plist  LICENSE.md  README.md  imgui.ini
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/UI/: component_layer.cpp  component_layer.h  hierarchy_layer.cpp  hierarchy_layer.h  imgui_helper.cpp  imgui_helper.h  main_layer.cpp  main_layer.h  resources_layer.cpp  resources_layer.h  scene_layer.cpp  scene_layer.h  text_edit_layer.cpp  text_edit_layer.h  timeline_layer.cpp  timeline_layer.h  ui_context.h
src/animation/: animation.cpp  animation.h  animator.cpp  animator.h  assimp_animation.cpp  assimp_animation.h  bone.cpp  bone.h
src/blueprint/: blueprint.cpp  blueprint.h
src/blueprint/utilities/: builders.cpp
src/entity/: entity.cpp  entity.h
src/entity/components/: animation_component.cpp  animation_component.h  blueprint_component.cpp  blueprint_component.h  component.h  pose_component.cpp  pose_component.h  serialization_component.cpp  serialization_component.h  transform_component.cpp  transform_component.h
src/event/: event_history.h
src/glcpp/: camera.cpp  camera.h  window.cpp  window.h
src/graphics/: mesh.h  post_processing.cpp  post_processing.h  shader.h  sprite.cpp  sprite.h
src/graphics/opengl/: framebuffer.cpp  framebuffer.h  gl_mesh.cpp  gl_mesh.h  gl_shader.cpp  gl_shader.h  gl_sprite.cpp  gl_sprite.h  grid.cpp  grid.h  image.cpp  image.h
src/physics/: Geometry.cpp  Geometry.h  GeometryExtensions.h  ObjectManager.cpp  ObjectManager.h  PhysicsUtils.cpp  PhysicsUtils.h  PhysicsWorld.cpp  PhysicsWorld.h
src/platform/mac/: MainMenu.xib
src/power/: Application.cpp  Application.hpp  Application.mm  CMakeLists.txt  CameraActorLoader.cpp  CameraActorLoader.hpp  CameraManager.cpp  CameraManager.hpp  Canvas.cpp  Canvas.hpp  ICameraManager.hpp  MeshActorLoader.cpp  MeshActorLoader.hpp  MetalHelper.hpp  MetalHelper.mm  RenderCommon.cpp  RenderCommon.hpp  RenderManager.cpp  RenderManager.hpp  ShaderManager.cpp  ShaderManager.hpp  UiCommon.cpp  UiCommon.hpp  main.cpp
src/power/actors/: Actor.cpp  Actor.hpp  ActorManager.cpp  ActorManager.hpp  Camera.cpp  Camera.hpp  GizmoActor.cpp  GizmoActor.hpp  IActorManager.hpp  IActorSelectedCallback.hpp  IActorSelectedRegistry.hpp
src/power/ai/: DallEApiClient.cpp  DallEApiClient.hpp  DallEPromptWindow.cpp  DallEPromptWindow.hpp  DallESettingsWindow.cpp  DallESettingsWindow.hpp  DeepMotionApiClient.cpp  DeepMotionApiClient.hpp  DeepMotionPromptWindow.cpp  DeepMotionPromptWindow.hpp  DeepMotionSettingsWindow.cpp  DeepMotionSettingsWindow.hpp  OpenAiApiClient.cpp  OpenAiApiClient.hpp  PowerAi.cpp  PowerAi.hpp  PowerPromptWindow.cpp  PowerPromptWindow.hpp  PowerSettingsWindow.cpp  PowerSettingsWindow.hpp  PromptWindow.cpp  PromptWindow.hpp  TripoAiApiClient.cpp  TripoAiApiClient.hpp
src/power/animation/: Animation.hpp  AnimationTimeProvider.hpp  HeuristicSkeletonPoser.cpp  HeuristicSkeletonPoser.hpp  IBone.hpp  ISkeleton.hpp  Skeleton.hpp  StackableAnimationTimeProvider.hpp  Transform.hpp
src/power/buffers/: blueprint.fbs  scene.fbs
src/power/components/: AnimationComponent.hpp  BlueprintComponent.cpp  BlueprintComponent.hpp  BlueprintMetadataComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  ColorComponent.cpp  ColorComponent.hpp  DrawableComponent.cpp  DrawableComponent.hpp  GizmoComponent.cpp  GizmoComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MetadataComponent.hpp  ModelMetadataComponent.hpp  PlaybackComponent.hpp  PrimitiveComponent.cpp  PrimitiveComponent.hpp  SkeletonComponent.hpp  SkinnedAnimationComponent.hpp  SkinnedMeshComponent.cpp  SkinnedMeshComponent.hpp  TimelineComponent.hpp  Transform.hpp  TransformAnimationComponent.hpp  TransformComponent.hpp  UiComponent.hpp
src/power/execution/: BlueprintCanvas.cpp  BlueprintCanvas.hpp  BlueprintManager.hpp  BlueprintNode.cpp  BlueprintNode.hpp  ExecutionManager.hpp  KeyPressNode.cpp  KeyPressNode.hpp  KeyReleaseNode.cpp  KeyReleaseNode.hpp  Node.cpp  Node.hpp  NodeProcessor.cpp  NodeProcessor.hpp  PrintNode.cpp  PrintNode.hpp  ReflectedNode.cpp  ReflectedNode.hpp  StringNode.cpp  StringNode.hpp
src/power/filesystem/: CompressedSerialization.hpp  DirectoryNode.cpp  DirectoryNode.hpp  ImageUtils.cpp  ImageUtils.hpp  MeshActorExporter.cpp  MeshActorExporter.hpp  MeshActorImporter.cpp  MeshActorImporter.hpp  MeshDeserializer.cpp  MeshDeserializer.hpp  UrlOpener.hpp  VectorConversion.hpp
src/power/gizmo/: GizmoManager.cpp  GizmoManager.hpp  GizmoManager.mm  RotationGizmo.cpp  RotationGizmo.hpp  ScaleGizmo.cpp  ScaleGizmo.hpp  TranslationGizmo.cpp  TranslationGizmo.hpp
src/power/grok/: Client.cpp  Client.hpp  Message.hpp  PromptBox.cpp  PromptBox.hpp
src/power/import/: Fbx.cpp  Fbx.hpp  Gr2.cpp  Gr2.hpp  ModelImporter.cpp  ModelImporter.hpp  SkinnedFbx.cpp  SkinnedFbx.hpp  SkinnedGr2.cpp  SkinnedGr2.hpp
src/power/platform/: ContextMenu.hpp
src/power/reflection/: PowerReflection.cpp  PowerReflection.hpp
src/power/serialization/: BlueprintSerializer.cpp  BlueprintSerializer.hpp  SceneSerializer.cpp  SceneSerializer.hpp  SerializationModule.cpp  SerializationModule.hpp  UUID.hpp
src/power/simulation/: Cartridge.hpp  CartridgeActorLoader.cpp  CartridgeActorLoader.hpp  DebugBridgeCommon.hpp  DebugBridgeServer.cpp  DebugBridgeServer.hpp  ICartridge.hpp  ICartridgeActorLoader.hpp  ILoadedCartridge.hpp  Primitive.hpp  PrimitiveBuilder.cpp  PrimitiveBuilder.hpp  PrimitiveShape.hpp  SimulationServer.cpp  SimulationServer.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/power/ui/: AnimationPanel.cpp  AnimationPanel.hpp  CameraPanel.cpp  CameraPanel.hpp  FileView.cpp  FileView.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  HierarchyToolPanel.cpp  HierarchyToolPanel.hpp  ImportWindow.cpp  ImportWindow.hpp  Panel.cpp  (+15 more)
src/resources/: exporter.cpp  exporter.h  importer.cpp  importer.h  model.cpp  model.h  shared_resources.cpp  shared_resources.h
src/scene/: main_scene.cpp  main_scene.h  scene.hpp
src/shading/: light_manager.cpp  light_manager.h
src/util/: utility.h
(+129 files in other folders)
